...
        self.tableView.dataSource = self
        self.tableView.estimatedRowHeight = 165
        self.tableView.rowHeight = UITableView.automaticDimension
        self.tableView.tableFooterView = UIView(frame: .zero)
        self.tableView.isAccessibilityElement = true
        self.tableView.translatesAutoresizingMaskIntoConstraints = false
        self.tableView.accessibilityIdentifier = "table--listTableView"
        if self.navigationController?.navigationBar.prefersLargeTitles == true {
            self.tableView.refreshControl = refreshControl
            self.extendedLayoutIncludesOpaqueBars = true
            
        } else {
            self.tableView.addSubview(refreshControl)
...
